kubernetes/apps/media/tdarr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr-internal
  namespace: media
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - tdarr.krapulax.home
  rules:
    - backendRefs:
        - name: tdarr
          namespace: media
          port: 8265
