kubernetes/apps/media/tdarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tdarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Tdarr
    gethomepage.dev/icon: tdarr.png
    gethomepage.dev/description: Distributed media transcoding and health checks
    gethomepage.dev/weight: "90"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - tdarr.krapulax.dev
  rules:
    - backendRefs:
        - name: tdarr
          namespace: media
          port: 8265
